<resources>
    <string name="app_name">智能云家</string>
    <string name="nav_message">场景</string>
    <string name="nav_setting">设置</string>
    <string name="nav_null">" "</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="float_add_device">添加设备</string>
    <string name="nav_home">主页</string>
    <string name="home_username_default">Hello, Emmanuel</string>
    <string name="home_card_title">暂无运行中的设备</string>
    <string name="home_card_date">16 Nov, 2022</string>
    <string name="home_tab1">房间</string>
    <string name="home_tab2">设备</string>
    <string name="home_login_status_warning">登录状态异常</string>
    <string name="home_room_delete_success">房间删除成功</string>
    <string name="home_room_delete_failure">房间删除失败</string>
    <string name="home_device_delete_success">设备删除成功</string>
    <string name="home_device_delete_failure">设备删除失败</string>
    <string name="home_shift_mode">切换显示模式</string>
    <string name="home_delete_title">房间删除</string>
    <string name="home_delete_room_content">您确定要删除这个房间?</string>
    <string name="home_delete_device_content">您确定要删除这个设备?</string>

    <!--    auth    -->
    <string name="auth_welcome_back">欢迎您使用我们的软件</string>
    <string name="auth_welcome_description">为了获得更好的用户体验, 请先登录</string>
    <string name="auth_tab1">登录</string>
    <string name="auth_tab2">注册</string>
    <string name="auth_et_email_hint_text">邮箱</string>
    <string name="auth_et_confidence_hint_text">密码</string>
    <string name="auth_et_verified_hint_text">验证码</string>
    <string name="auth_et_phone_hint_text">手机号码</string>
    <string name="auth_bt_send">发送</string>

    <string name="auth_verified_success_phone">验证码验证成功, 请输入您的手机号码</string>
    <string name="auth_verified_enter_tip">请输入正确的验证码</string>

    <string name="auth_verified_register_failure">注册失败, 请重试</string>
    <string name="auth_verified_register_success">注册成功</string>

    <string name="auth_verified_email_not_null">邮箱不能为空!!!</string>
    <string name="auth_verified_sms_not_null">验证码不能为空!!!</string>
    <string name="auth_verified_phonenumber_not_null">手机号不能为空!!!</string>
    <string name="auth_verified_password_not_null">密码不能为空!!!</string>
    <string name="auth_verified_login_success">登录成功</string>
    <string name="auth_verified_login_failure">登陆失败,请重试</string>
    <string name="auth_state_abnormal">登录状态异常</string>
    <string name="auth_state_abnormal_tip">请登录后使用智能云居</string>

    <!--    airCondition -->
    <string name="air_mode_tab1">制热</string>
    <string name="air_mode_tab2">制冷</string>
    <string name="air_mode_tab3">通风</string>
    <string name="air_mode_tab4">除湿</string>
    <string name="air_speed_tip">风速</string>
    <string name="air_wind_tab_left_right">左右扫风</string>
    <string name="air_wind_tab_auto">自动扫风</string>
    <string name="air_wind_tab_up_down">上下扫风</string>

    <!--    Exhibition -->
    <string name="exhibit_room_detail_failure">房间信息获取失败</string>
    <string name="exhibit_room_device_failure">房间设备获取失败</string>
    <string name="exhibit_kind_device_failure">设备获取失败</string>
    <string name="exhibit_toolbar_menu">房间控制</string>
    <string name="exhibit_toolbar_menu_edit">修改房间信息</string>

    <!--    AppendFragment -->
    <string name="append_search">点击搜索设备</string>
    <string name="append_search_tip_room">点击房间图标添加房间</string>
    <string name="append_search_tip_device">点击搜索按钮添加设备 \n
        或点击图标手动添加设备</string>
    <string name="append_search_running">正在搜索中…</string>
    <string name="append_search_cancel">取消</string>
    <string name="append_room">添加房间</string>
    <string name="append_room_tip">请输入房间名</string>
    <string name="append_device_to">添加设备到</string>
    <string name="append_no_gateway_title">请配置网络</string>
    <string name="append_no_gateway_title_content">点击我的->网络管理->打开蓝牙后选择网关设备配置网络</string>

    <!--    SettingFragment -->
    <string name="setting_person_text">账户管理</string>
    <string name="setting_gateway_text">网关配置</string>
    <string name="setting_wisdom_text">智慧生活</string>
    <string name="setting_logout_text">退出登录</string>

    <!--    WisdomFragment -->
    <string name="wisdom_indoor_text">回家</string>
    <string name="wisdom_outdoor_text">离家</string>
    <string name="wisdom_sleep_text">全屋睡眠</string>
    <string name="wisdom_random_text">自定义</string>
    <string name="wisdom_indoor_title">开启回家模式</string>
    <string name="wisdom_outdoor_title">开启离家模式</string>
    <string name="wisdom_sleep_title">开启全屋睡眠模式</string>
    <string name="wisdom_indoor_content">打开全部空调和灯</string>
    <string name="wisdom_outdoor_content">关闭所有设备,保障房屋安全</string>
    <string name="wisdom_sleep_content">所有非灯设备低功率运行,呵护您的睡眠</string>
    <string name="wisdom_custom_add_title">自定义定时任务</string>
    <string name="wisdom_custom_add_task_name">请输入自定义定时任务名</string>
    <string name="wisdom_custom_add_task_time">任务执行时间</string>
    <string name="wisdom_custom_add_task_tog_once">一次</string>
    <string name="wisdom_custom_add_task_tog_everyday">每日</string>

    <string name="device_name">请输入设备名</string>
    <string name="device_delete_title">设备删除</string>

    <string name="custom_input_device_id">账号</string>
    <string name="custom_input_device_name">密码</string>

    <string name="gateway_add">点击搜索网关设备配网</string>
    <string name="please_input_password">请输入新的门锁密码</string>
    <string name="controllerGateway_error">网关设备不支持编辑</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="wisdom_custom_delete_title">删除定时任务</string>
    <string name="wisdom_custom_content">确定删除定时任务</string>
    <string name="wisdom_wisdom_title">开启温馨回家模式</string>
    <string name="wisdom_wisdom_content">摄像头检测到您回家时,会自动为您开启全屋灯光并打开空调</string>
    <string name="wisdom_wisdom2_title">开启轻松离家模式</string>
    <string name="wisdom_wisdom2_content">
        摄像头检测到您离家时,会自动为您关闭全屋灯光并调低空调功率
    </string>

    <string name="person_change_password">修改密码</string>
    <string name="person_change_content">请输入新的密码</string>
    <string name="custom_input_oldpwd">请输入旧密码</string>
    <string name="custom_input_newpwd">请输入新密码</string>
    <string name="custom_input_verified">请输入验证码</string>
    <string name="please_input_verifiedCode">请输入安全验证码</string>
    <string name="custom_input_doorLockPwd">请输入新的门锁密码</string>
    <string name="setting_watch_text">智能穿戴</string>
    <string name="bracelet_card">交通卡</string>
    <string name="bracelet_door_card">NFC</string>
    <string name="bracelet_market">表盘中心</string>
    <string name="bracelet_health">健康</string>
    <string name="bracelet_sports">运动</string>
    <string name="bracelet_notice">通知</string>
    <string name="bracelet_alarm">闹钟</string>
    <string name="bracelet_weather">天气</string>
    <string name="bracelet_help">帮助</string>
    <string name="watch_power">剩余电量</string>
    <string name="watch_health_title">睡眠数据</string>
    <string name="watch_health_sleeptime">睡眠时间</string>


</resources>