<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/custom_input_device"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginHorizontal="20dp"
        android:id="@+id/custom_input_oldpwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:hint="@string/custom_input_oldpwd"
        android:textCursorDrawable="@null"
        android:textColor="@color/main_color_primary_variant"
        android:textColorHint="@color/second_color_variant"
        android:theme="@style/editTextLine"
        android:layout_height="40dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginHorizontal="20dp"
        android:textCursorDrawable="@null"
        android:id="@+id/custom_input_newpwd"
        android:textColorHint="@color/second_color_variant"
        app:layout_constraintTop_toBottomOf="@id/custom_input_oldpwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/editTextLine"
        android:textColor="@color/main_color_primary_variant"
        android:hint="@string/custom_input_newpwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginHorizontal="20dp"
        android:textCursorDrawable="@null"
        android:id="@+id/custom_input_verified"
        android:textColorHint="@color/second_color_variant"
        app:layout_constraintTop_toBottomOf="@id/custom_input_newpwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/editTextLine"
        android:textColor="@color/main_color_primary_variant"
        android:hint="@string/custom_input_verified"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>