<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/home_cardView">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/home_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/home_notification"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="35dp"
                    android:background="@drawable/circle_bg"
                    android:src="@drawable/ic_outline_notifications_active_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="To jump to notification page" />

                <TextView
                    android:id="@+id/home_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:maxLines="1"
                    android:text="@string/home_username_default"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/main_color"
                android:id="@+id/home_cardView"
                android:layout_marginHorizontal="25dp"
                app:layout_constraintTop_toBottomOf="@+id/home_appbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="15dp"
                        android:background="@drawable/circle_retangle_bg"
                        android:backgroundTint="@color/main_color_primary_variant"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/home_cardView_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="0dp"
                            android:paddingStart="15dp"
                            android:text="@string/home_card_title"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/home_cardView_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/circle_retangle_bg"
                            android:backgroundTint="@color/main_color_primary_secondary"
                            android:padding="5dp"
                            android:text="@string/home_card_date"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="RelativeOverlap" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:paddingStart="15dp"
                        android:layout_marginHorizontal="15dp">

                        <ImageButton
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/circle_bg"
                            android:backgroundTint="@color/main_color_primary_variant">

                        </ImageButton>
                    </RelativeLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.tabs.TabLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </com.google.android.material.tabs.TabLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
